// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeDisplay renders as expected - Component API should match snapshot for count-up 1`] = `
<div>
  <div
    class="clabs--time-display clabs--time-display--animated"
  >
    <div
      aria-live="off"
      class="clabs--time-display__sr-only"
      role="status"
    >
      Elapsed time: 0 hours, 0 minutes, 10 seconds
    </div>
    <span
      class="clabs--time-display__label"
    >
      Elapsed time
    </span>
    <div>
      <div
        class="clabs--time-display__split-container"
        dir="ltr"
      >
        <div
          class="clabs--time-display__split-unit clabs--time-display__split-unit--first"
        >
          <div
            class="clabs--time-display__split-value-wrapper"
          >
            <div
              class="clabs--time-display__split-value"
            >
              <span
                dir="ltr"
              >
                <span
                  class="clabs--animated-digit__container"
                >
                  <span
                    class="clabs--animated-digit__slider"
                  >
                    <span
                      class="clabs--animated-digit__current"
                    >
                      0
                    </span>
                  </span>
                </span>
                <span
                  class="clabs--animated-digit__container"
                >
                  <span
                    class="clabs--animated-digit__slider"
                  >
                    <span
                      class="clabs--animated-digit__current"
                    >
                      0
                    </span>
                  </span>
                </span>
              </span>
            </div>
            <div
              class="clabs--time-display__split-label"
            >
              hr
            </div>
          </div>
        </div>
        <div
          class="clabs--time-display__split-unit"
        >
          <div
            class="clabs--time-display__split-value-wrapper"
          >
            <div
              class="clabs--time-display__split-value"
            >
              <span
                dir="ltr"
              >
                <span
                  class="clabs--animated-digit__container"
                >
                  <span
                    class="clabs--animated-digit__slider"
                  >
                    <span
                      class="clabs--animated-digit__current"
                    >
                      0
                    </span>
                  </span>
                </span>
                <span
                  class="clabs--animated-digit__container"
                >
                  <span
                    class="clabs--animated-digit__slider"
                  >
                    <span
                      class="clabs--animated-digit__current"
                    >
                      0
                    </span>
                  </span>
                </span>
              </span>
            </div>
            <div
              class="clabs--time-display__split-label"
            >
              min
            </div>
          </div>
        </div>
        <div
          class="clabs--time-display__split-unit"
        >
          <div
            class="clabs--time-display__split-value-wrapper"
          >
            <div
              class="clabs--time-display__split-value"
            >
              <span
                dir="ltr"
              >
                <span
                  class="clabs--animated-digit__container"
                >
                  <span
                    class="clabs--animated-digit__slider"
                  >
                    <span
                      class="clabs--animated-digit__current"
                    >
                      1
                    </span>
                  </span>
                </span>
                <span
                  class="clabs--animated-digit__container"
                >
                  <span
                    class="clabs--animated-digit__slider"
                  >
                    <span
                      class="clabs--animated-digit__current"
                    >
                      0
                    </span>
                  </span>
                </span>
              </span>
            </div>
            <div
              class="clabs--time-display__split-label"
            >
              sec
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimeDisplay renders as expected - Component API should match snapshot for duration 1`] = `
<div>
  <div
    class="clabs--time-display clabs--time-display--animated"
  >
    <div
      aria-live="off"
      class="clabs--time-display__sr-only"
      role="status"
    >
      Total runtime: 1 hour, 1 minute, 1 second
    </div>
    <span
      class="clabs--time-display__label"
    >
      Total runtime
    </span>
    <div>
      <div
        class="clabs--time-display__split-container"
        dir="ltr"
      >
        <div
          class="clabs--time-display__split-unit clabs--time-display__split-unit--first"
        >
          <div
            class="clabs--time-display__split-value-wrapper"
          >
            <div
              class="clabs--time-display__split-value"
            >
              <span
                dir="ltr"
              >
                <span
                  class="clabs--animated-digit__container"
                >
                  <span
                    class="clabs--animated-digit__slider"
                  >
                    <span
                      class="clabs--animated-digit__current"
                    >
                      0
                    </span>
                  </span>
                </span>
                <span
                  class="clabs--animated-digit__container"
                >
                  <span
                    class="clabs--animated-digit__slider"
                  >
                    <span
                      class="clabs--animated-digit__current"
                    >
                      1
                    </span>
                  </span>
                </span>
              </span>
            </div>
            <div
              class="clabs--time-display__split-label"
            >
              hr
            </div>
          </div>
        </div>
        <div
          class="clabs--time-display__split-unit"
        >
          <div
            class="clabs--time-display__split-value-wrapper"
          >
            <div
              class="clabs--time-display__split-value"
            >
              <span
                dir="ltr"
              >
                <span
                  class="clabs--animated-digit__container"
                >
                  <span
                    class="clabs--animated-digit__slider"
                  >
                    <span
                      class="clabs--animated-digit__current"
                    >
                      0
                    </span>
                  </span>
                </span>
                <span
                  class="clabs--animated-digit__container"
                >
                  <span
                    class="clabs--animated-digit__slider"
                  >
                    <span
                      class="clabs--animated-digit__current"
                    >
                      1
                    </span>
                  </span>
                </span>
              </span>
            </div>
            <div
              class="clabs--time-display__split-label"
            >
              min
            </div>
          </div>
        </div>
        <div
          class="clabs--time-display__split-unit"
        >
          <div
            class="clabs--time-display__split-value-wrapper"
          >
            <div
              class="clabs--time-display__split-value"
            >
              <span
                dir="ltr"
              >
                <span
                  class="clabs--animated-digit__container"
                >
                  <span
                    class="clabs--animated-digit__slider"
                  >
                    <span
                      class="clabs--animated-digit__current"
                    >
                      0
                    </span>
                  </span>
                </span>
                <span
                  class="clabs--animated-digit__container"
                >
                  <span
                    class="clabs--animated-digit__slider"
                  >
                    <span
                      class="clabs--animated-digit__current"
                    >
                      1
                    </span>
                  </span>
                </span>
              </span>
            </div>
            <div
              class="clabs--time-display__split-label"
            >
              sec
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
